--- a/src/ScriptSqlConfig/ScriptSqlConfig.csproj
+++ b/src/ScriptSqlConfig/ScriptSqlConfig.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
