--- a/src/ScriptSqlConfig/app.config
+++ b/src/ScriptSqlConfig/app.config
@@ -1,3 +1,89 @@
 <?xml version="1.0"?>
 <configuration>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+  <startup>
+      <supportedRuntime version="v2.0.50727"/>
+  </startup>
+
+  <!--
+  
+  Uncommnet the following section to remap the SMO vesions
+  This is build with SQL Server 2012 SMO.  It should run
+  with most common SMO vesions.
+  
+  Replace the "newVersion" with the version you'd like 
+  to target.
+  
+  SQL Server 2008     10.0.0.0
+  SQL Server 2008 R2  10.50.0.0
+  SQL Server 2012     11.0.0.0
+  SQL Server 2014     12.0.0.0
+  
+  -->
+  
+  
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.Smo"
+          publicKeyToken="89845dcd8080cc91"
+          culture="neutral" />
+         Assembly versions can be redirected in application, 
+          publisher policy, or machine configuration files. 
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.ConnectionInfo"
+          publicKeyToken="89845dcd8080cc91"
+          culture="neutral" />
+         Assembly versions can be redirected in application, 
+          publisher policy, or machine configuration files. 
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+
+
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.ConnectionInfoExtended"
+          publicKeyToken="89845dcd8080cc91"
+          culture="neutral" />
+         Assembly versions can be redirected in application, 
+          publisher policy, or machine configuration files. 
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.Management.Sdk.Sfc"
+          publicKeyToken="89845dcd8080cc91"
+          culture="neutral" />
+         Assembly versions can be redirected in application, 
+          publisher policy, or machine configuration files. 
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.SmoExtended"
+          publicKeyToken="89845dcd8080cc91"
+          culture="neutral" />
+         Assembly versions can be redirected in application, 
+          publisher policy, or machine configuration files. 
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+
+
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SqlServer.SqlEnum"
+          publicKeyToken="89845dcd8080cc91"
+          culture="neutral" />
+         Assembly versions can be redirected in application, 
+          publisher policy, or machine configuration files. 
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+
+    </assemblyBinding>
+  </runtime>
+  
+  
+  
+  
+</configuration>
