Comment out the SMO by default

--- a/src/ScriptSqlConfig/app.config
+++ b/src/ScriptSqlConfig/app.config
@@ -7,7 +7,7 @@
   <!--
   
   Uncommnet the following section to remap the SMO vesions
-  This is build with SQL Server 2012 SMO.  It should run
+  This is built with SQL Server 2012 SMO.  It should run
   with most common SMO vesions.
   
   Replace the "newVersion" with the version you'd like 
@@ -21,7 +21,7 @@
   -->
   
   
-  <runtime>
+  <!--<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       
       <dependentAssembly>
@@ -81,7 +81,7 @@
       </dependentAssembly>
 
     </assemblyBinding>
-  </runtime>
+  </runtime>-->
   
   
   
