Fixes for SQL Server 2016 and default SMO

--- a/src/ScriptSqlConfig/app.config
+++ b/src/ScriptSqlConfig/app.config
@@ -17,11 +17,12 @@
   SQL Server 2008 R2  10.0.0.0  (Uses the previous SMO)
   SQL Server 2012     11.0.0.0
   SQL Server 2014     12.0.0.0
+  SQL Server 2016     13.0.0.0
   
   -->
   
   
-  <!--<runtime>
+  <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       
       <dependentAssembly>
@@ -30,7 +31,7 @@
           culture="neutral" />
          Assembly versions can be redirected in application, 
           publisher policy, or machine configuration files. 
-        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
 
       <dependentAssembly>
@@ -39,7 +40,7 @@
           culture="neutral" />
          Assembly versions can be redirected in application, 
           publisher policy, or machine configuration files. 
-        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
 
 
@@ -49,7 +50,7 @@
           culture="neutral" />
          Assembly versions can be redirected in application, 
           publisher policy, or machine configuration files. 
-        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
 
       <dependentAssembly>
@@ -58,7 +59,7 @@
           culture="neutral" />
          Assembly versions can be redirected in application, 
           publisher policy, or machine configuration files. 
-        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
 
       <dependentAssembly>
@@ -67,7 +68,7 @@
           culture="neutral" />
          Assembly versions can be redirected in application, 
           publisher policy, or machine configuration files. 
-        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
 
 
@@ -77,11 +78,11 @@
           culture="neutral" />
          Assembly versions can be redirected in application, 
           publisher policy, or machine configuration files. 
-        <bindingRedirect oldVersion="11.0.0.0" newVersion="10.0.0.0" />
+        <bindingRedirect oldVersion="11.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
 
     </assemblyBinding>
-  </runtime>-->
+  </runtime>
   
   
   
