Debugging on target SMO version

--- a/src/ScriptSqlConfig/app.config
+++ b/src/ScriptSqlConfig/app.config
@@ -22,7 +22,7 @@
   -->
   
   
-  <runtime>
+  <!--<runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       
       <dependentAssembly>
@@ -82,7 +82,7 @@
       </dependentAssembly>
 
     </assemblyBinding>
-  </runtime>
+  </runtime>-->
   
   
   
